# SingleCell_Analysis_Tools

./: .gitignore  README.md  pyproject.toml
sctools/: __init__.py  alra.py  annotation.py  degs.py  functionalanalysis.py  integration.py  io.py  non_used_functions.py  plots.py  preprocessing.py  qc.py
sctools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sctools/integration/: __init__.py  benchmarking.py  curation.py  methods.py  workflow.py
